<resources>
    <string name="app_name">FoodPlanner</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favorites">Favorites</string>
    <string name="week_plan">Week Plan</string>
    <string name="greeting">Morning, What are you craving today?</string>
    <string name="meal_of_the_day">Meal Of The Day</string>
    <string name="favorite">Favorite</string>
    <string name="content_description_search">Icon to search in meals</string>
    <string name="content_description_favorite">Icon Add meal to favorites</string>
    <string name="origin_country">Origin Country</string>
    <string name="Ingredients">Ingredients</string>
    <string name="steps">Steps</string>
    <string name="choose_by_category">Choose By Category</string>
    <string name="choose_by_area">Choose By Area</string>
    <string name="slogan">Plan, Prepare, Eat!</string>
    <string name="category">Category</string>
    <string name="ingredient">Ingredient</string>
    <string name="filter_by">Filter By</string>
    <string name="view_pager_1_title">Get Inspired</string>
    <string name="view_pager_2_title">Save You Plan</string>
    <string name="view_pager_3_title">Everything is Ready</string>
    <string name="view_pager_1_text">You can view daily inspiration to pick from</string>
    <string name="view_pager_2_text">You can search in meals and view recipes and make a plan for your week\'s meals!</string>
    <string name="view_pager_3_text">Prepare Food and Enjoy!</string>
    <string name="no_item_found">No Item Found</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="new_user">New User? SignUp</string>
    <string name="already_hav_acc">Already Have an Account? Login</string>
    <string name="confirm_password">Confrim Password</string>
    <string name="full_name">Full Name</string>
    <string name="default_web_client_id">267926310557-neb96of56v7352coh1mn0b53imju3jr3.apps.googleusercontent.com</string>
    <string name="web_client_secret">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</string>
    <string name="your_favorites">Your Favorite Meals</string>
    <string name="sync_data">Sync Data</string>
    <string name="logout">Log Out</string>
    <string name="week_plan_title">Your Plan</string>
    <string name="today_plan_title">Today\'s Plan</string>
    <string name="tomorrow_plan_title">Tomorrow\'s Plan</string>
    <string name="pic_date">Pic A Date</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="start_journey">Let\'s Start</string>
    <string name="signup_google">SignUp By Google</string>
    <string name="continue_as_guest">Continue as Guest</string>
    <string name="login_google">Login with Google</string>
    <string name="not_logged_in">Content Not Available!\nLogin to view full content</string>
    <string name="country">Country</string>
    <string name="search_by_ingredient">Search By Ingredient</string>
    <string name="search_by_country">Search By Origin Country</string>
    <string name="search_by_category">Search By Category</string>
    <string name="search_by_meal_name">Search By Meal Name</string>
    <string name="your_viewing_search">You are Viewing Meals of: %s</string>
    <string name="please_select_date">Please select a date to save meal to plan</string>
    <string name="select_date">Select date</string>
    <string name="data_sync_success">Data Synced Successfully</string>
    <string name="data_sync_error">Error Updating Data</string>
    <string name="random_date">Later in this week</string>
    <string name="no_network">Network Error</string>
</resources>