<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/home_empty"
        android:title="@string/home"
        android:id="@+id/homeFragment"/>
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/search"
        android:title="@string/search"
        android:id="@+id/searchFragment"/>
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/favorite_empty"
        android:title="@string/favorites"
        android:id="@+id/favoritesFragment"/>
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/schedule_empty"
        android:title="@string/week_plan"
        android:id="@+id/weekPlanFragment"/>
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/profile"
        android:title="@string/profile"
        android:id="@+id/profileFragment"/>
</menu>