<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.foodplanner.home_screen.view.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.example.foodplanner.detail_screen.view.DetailFragment"
        android:label="Meal Details"
        tools:layout="@layout/fragment_detail" >
        <argument
            android:name="mealID"
            app:argType="string"
            app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/favoritesFragment"
        android:name="com.example.foodplanner.favorites.FavoritesFragment"
        android:label="@string/favorites"
        tools:layout="@layout/fragment_favorites">
        <action
            android:id="@+id/action_favoritesFragment_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.example.foodplanner.search_screen.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/action_searchFragment_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.foodplanner.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/weekPlanFragment"
        android:name="com.example.foodplanner.week_plan.WeekPlanFragment"
        android:label="@string/week_plan"
        tools:layout="@layout/fragment_week_plan">
        <action
            android:id="@+id/action_weekPlanFragment_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>
</navigation>