<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".week_plan.view.WeekPlanFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/titleWeekPlan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/week_plan_title"
            app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toTopOf="@+id/guidelineTop" />

        <TextView
            android:id="@+id/todayText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/today_plan_title"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/titleWeekPlan" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/todayRecyclerView"
            android:layout_width="0dp"
            android:layout_height="309dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/todayText" />

        <TextView
            android:id="@+id/tomorrowText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/tomorrow_plan_title"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/todayRecyclerView" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tomorrowRecyclerView"
            android:layout_width="wrap_content"
            android:layout_height="309dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/tomorrowText" />

        <TextView
            android:id="@+id/anyDayText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/pic_date"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/tomorrowRecyclerView" />

        <TextView
            android:id="@+id/pic_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pic_date"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintTop_toTopOf="@+id/anyDayText"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/anyDayRecyclerView"
            android:layout_width="wrap_content"
            android:layout_height="309dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/anyDayText"
            app:layout_constraintBottom_toBottomOf="@id/guidelineBottom"/>
        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_plan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="anyDayRecyclerView, todayRecyclerView,
            tomorrowRecyclerView,pic_date, anyDayText, tomorrowText, todayText, titleWeekPlan"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="16dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/not_loggedin_plan"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <ImageView
                android:id="@+id/img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/hacker"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_logged_in"
                app:layout_constraintTop_toBottomOf="@id/img"
                app:layout_constraintStart_toStartOf="@id/img"
                app:layout_constraintEnd_toEndOf="@id/img"/>

            <Button
                android:id="@+id/login_plan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                app:layout_constraintTop_toBottomOf="@id/txt"
                app:layout_constraintStart_toStartOf="@id/img"
                app:layout_constraintEnd_toEndOf="@id/img"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>